--- a/ladronzuelos.html
+++ b/ladronzuelos.html
@@ -3,7 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Los ladronzuelos de bicicletas</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Los ladronzuelos de bicicletas</h1>
+    <form>
+      <fieldset>
+        <legend>Momento del robo</legend>
+        <label for="dia">Día:</label>
+        <input type="date" id="dia" name="dia" autofocus required />
+
+        <label for="hora">Hora:</label>
+        <input type="time" id="hora" name="hora" required />
+      </fieldset>
+      <br />
+
+      <fieldset>
+        <legend>Características de la bicicleta</legend>
+        <label for="color">Color de la bicicleta:</label>
+        <input type="color" id="color" name="color" value="#FFFFFF" />
+
+        <label for="rango">Rango de precio (0€ - 10000€):</label>
+        <input
+          type="range"
+          id="rango"
+          name="rango"
+          min="0"
+          max="10000"
+          step="100" /><br />
+
+        <label for="tipo">Tipo de bicicleta:</label>
+        <select id="tipo" name="tipo" size="1">
+          <optgroup label="Paseo">
+            <option value="señorial">Señorial</option>
+            <option value="noPlebeyos">Anti-plebeyos</option>
+            <option value="hombro">PorEncimaDelHombro</option>
+          </optgroup>
+
+          <optgroup label="Montaña">
+            <option value="gamusinos">Gamusinos</option>
+            <option value="flores">Hueleflores premium</option>
+            <option value="fango">Fango lover</option>
+          </optgroup>
+
+          <optgroup label="Carreras">
+            <option value="metro">Metroymedio</option>
+            <option value="fluor">3 de la tarde. Fluorescente edition</option>
+            <option value="grupitors">Grupitors</option>
+          </optgroup></select
+        ><br />
+
+        <label for="accesorios">Accesorios:</label><br />
+        <select name="accesorios" id="accesorios" multiple size="6">
+          <option value="ruedines">Ruedines</option>
+          <option value="pegatinas">Pegatinas</option>
+          <option value="cestita">Cestita</option>
+          <option value="bomba de aire">Bomba de aire</option>
+          <option value="timbre">Timbre</option>
+          <option value="foco">Foco</option></select
+        ><br />
+
+        <label for="marcas">Qué marca era?:</label><br />
+        <input list="marcas" name="marca" placeholder="elige una marca" />
+        <datalist id="marcas">
+          <option value="specialized">Specialiced</option>
+          <option value="trek">Trek</option>
+          <option value="merida">Merida</option>
+          <option value="scott">Scott</option>
+          <option value="giant">Giant</option>
+          <option value="cube">Cube</option>
+          <option value="lapierre">Lapierre</option>
+          <option value="orbea">Orbea</option>
+          <option value="cannondale">Cannondale</option>
+          <option value="bmc">Bmc</option>
+          <option value="canyon">Canyon</option>
+          <option value="look">Look</option>
+          <option value="protek">Protek</option>
+          <option value="megamo">Megamo</option>
+          <option value="pinarello">Pinarello</option>
+          <option value="bianchi">Bianchi</option>
+          <option value="bh">Bh</option>
+          <option value="factor">Factor</option>
+          <option value="ghost">Ghost</option>
+          <option value="cervelo">Cervélo</option>
+          <option value="argon">Argon</option>
+        </datalist>
+      </fieldset>
+      <br />
+
+      <input type="submit" value="Submit" />
+      <input type="reset" value="Reset" />
+    </form>
+  </body>
 </html>
