--- a/viejuner.html
+++ b/viejuner.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>El club viejuner</title>
   </head>
   <body>
+    <h1>El club viejuner</h1>
     <form>
-      <h1>El club viejuner</h1>
       <fieldset>
         <legend>Tú:</legend>
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" autofocus required />
+        <input
+          type="text"
+          id="nombre"
+          name="nombre"
+          tabindex="0"
+          autofocus
+          required />
 
         <label for="apellidos">Apellidos:</label>
         <input type="text" id="apellidos" name="apellidos" required />
@@ -19,7 +25,7 @@
         <label for="edad"> Edad:</label>
         <input type="number" id="edad" name="edad" required /><br />
 
-        <input type="radio" id="hombre" name="sexo" required />
+        <input type="radio" id="hombre" name="sexo" tabindex="0" required />
         <label for="hombre">Hombre</label><br />
 
         <input type="radio" id="mujer" name="sexo" required />
@@ -29,7 +35,12 @@
         <label for="viejuner">Me siento viejuner:</label><br />
 
         <label for="personal">Escribe algo sobre tí:</label><br />
-        <textarea id="personal" name="personal" rows="5" cols="40"></textarea>
+        <textarea
+          id="personal"
+          name="personal"
+          rows="5"
+          cols="40"
+          placeholder="Escribe algo interesante sobre tí"></textarea>
       </fieldset>
       <br />
 
