--- a/viejuner.html
+++ b/viejuner.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>El club viejuner</h1>
-    <form>
+    <form style="width: fit-content; margin-inline-end: auto">
       <fieldset>
         <legend>Tú:</legend>
         <label for="nombre">Nombre:</label>
