--- a/ladronzuelos.html
+++ b/ladronzuelos.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Los ladronzuelos de bicicletas</h1>
-    <form>
+    <form style="width: fit-content">
       <fieldset>
         <legend>Momento del robo</legend>
         <label for="dia">Día:</label>
@@ -21,7 +21,7 @@
       <fieldset>
         <legend>Características de la bicicleta</legend>
         <label for="color">Color de la bicicleta:</label>
-        <input type="color" id="color" name="color" value="#FFFFFF" />
+        <input type="color" id="color" name="color" value="#FFFFFF" /><br />
 
         <label for="rango">Rango de precio (0€ - 10000€):</label>
         <input
@@ -66,27 +66,27 @@
         <label for="marcas">Qué marca era?:</label><br />
         <input list="marcas" name="marca" placeholder="elige una marca" />
         <datalist id="marcas">
-          <option value="specialized">Specialiced</option>
-          <option value="trek">Trek</option>
-          <option value="merida">Merida</option>
-          <option value="scott">Scott</option>
-          <option value="giant">Giant</option>
-          <option value="cube">Cube</option>
-          <option value="lapierre">Lapierre</option>
-          <option value="orbea">Orbea</option>
-          <option value="cannondale">Cannondale</option>
-          <option value="bmc">Bmc</option>
-          <option value="canyon">Canyon</option>
-          <option value="look">Look</option>
-          <option value="protek">Protek</option>
-          <option value="megamo">Megamo</option>
-          <option value="pinarello">Pinarello</option>
-          <option value="bianchi">Bianchi</option>
-          <option value="bh">Bh</option>
-          <option value="factor">Factor</option>
-          <option value="ghost">Ghost</option>
-          <option value="cervelo">Cervélo</option>
-          <option value="argon">Argon</option>
+          <option value="Specialized"></option>
+          <option value="Trek"></option>
+          <option value="Merida"></option>
+          <option value="Scott"></option>
+          <option value="Giant"></option>
+          <option value="Cube"></option>
+          <option value="Lapierre"></option>
+          <option value="Orbea"></option>
+          <option value="Cannondale"></option>
+          <option value="BMC"></option>
+          <option value="Canyon"></option>
+          <option value="Look"></option>
+          <option value="Protek"></option>
+          <option value="Megamo"></option>
+          <option value="Pinarello"></option>
+          <option value="Bianchi"></option>
+          <option value="BH"></option>
+          <option value="Factor"></option>
+          <option value="Ghost"></option>
+          <option value="Cervélo"></option>
+          <option value="Argon"></option>
         </datalist>
       </fieldset>
       <br />
